# claude-code-template

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.template  README.md  link-ios-skill.sh  setup.sh  skills-lock.json  status.md
.claude/: settings.local.json.example
.claude/skills/dsp-rta-comparison/: README.md  SKILL.md  pyproject.toml
.claude/skills/dsp-rta-comparison/lib/: __init__.py  __main__.py  core.py  io.py  loudness.py  phase.py  report.py  spectrum.py  transient.py
.claude/skills/dsp-rta-comparison/tests/: conftest.py  test_compare.py  test_modules.py
.github/: pull_request_template.md
docs/: audit-peer-drift-script-20260527.md  audit-settings-allow-script-design-20260526.md  audit-skills-lock-script-20260527.md  blender-mcp-cco-peer-setup.md  cco-12mo-goal-20260526.md  cco-review-cfo-monetization-baseline-20260526.md  claude-code-template-ops-improvement-20260512.md  claude-history-remote-mcp-setup.md  codex-pre-tf-qa-gate-rule-design-20260526.md  cognitive-load-v3-rollout-20260519.md  dev-flow-gate-rollout-20260520.md  github-secret-scanning-guide.md  gmail-mcp-multi-account-setup.md  growth-skill-audit-20260526.md  hoo-type-migration-spec.md  org-skill-audit-machine-detection-20260702.md  phase0-week2-swift-implementation-patterns.md  security-audit-report-20260331.md  status-md-public-allowlist.md  template-entry-narrowing-comms-migration-20260530.md  template-mcp-distribution-manifest.md  (+4 more)
mcps/aax-validator/: README.md  pyproject.toml  server.py
mcps/aax-validator/tests/: conftest.py  fixture_builder.py  test_integration.py  test_validator.py
(+139 files in other folders)
